# cfpg

./: README.md  pyproject.toml
cfpg/: __main__.py
cfpg/cli/: __init__.py
cfpg/core/: __init__.py  _calls.py  files.py  pull.py  resolve.py
scripts/: formatting.sh  testing.sh
tests/: conftest.py
tests/core/: test_files.py  test_resolve.py
tests/fixtures/: contest_history.json
